# par2cmdline-turbo

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  par2cmdline.sln  par2cmdline.vcxproj
.github/workflows/: build-dev-mac-arm64.yml  build-dev-macos.yml  build-dev.yml  build.yml
cmake/: common.cmake  config.h.in  posix.cmake  version.h.in  windows.cmake
include/par2/: commandline.h  crc.h  creatorpacket.h  criticalpacket.h  datablock.h  descriptionpacket.h  diskfile.h  filechecksummer.h  foreach_parallel.h  galois.h  hasher.h  letype.h  libpar2.h  mainpacket.h  md5.h  par1fileformat.h  par1repairer.h  par1repairersourcefile.h  par2creator.h  par2creatorsourcefile.h  par2fileformat.h  par2repairer.h  par2repairersourcefile.h  recoverypacket.h  reedsolomon.h  utf8.h  verificationhashtable.h  verificationpacket.h
include/par2/gf16/: controller.h  controller_cpu.h  controller_ocl.h  gf16_affine.h  gf16_affine2x_x86.h  gf16_affine_avx10.h  gf16_bitdep_init_avx2.h  gf16_bitdep_init_sse2.h  gf16_checksum_arm.h  gf16_checksum_generic.h  gf16_checksum_rvv.h  gf16_checksum_sve.h  gf16_checksum_x86.h  gf16_cksum.h  gf16_cksum_base.h  gf16_cksum_x86.h  gf16_clmul.h  gf16_clmul_neon.h  gf16_clmul_neon_base.h  gf16_clmul_rvv.h  gf16_clmul_sve2.h  gf16_global.h  gf16_lookup.h  gf16_neon_common.h  gf16_rvv_common.h  gf16_shuffle.h  gf16_shuffle128_sve_common.h  gf16_shuffle2x_x86.h  gf16_shuffle_x86.h  gf16_shuffle_x86_common.h  gf16_shuffle_x86_prepare.h  gf16_sve_common.h  gf16_xor.h  gf16_xor_common.h  gf16_xor_common_funcs.h  gf16mul.h  gf16pmul.h  gf16pmul_x86.h  gf_add.h  gf_add_x86.h  (+3 more)
include/par2/hasher/: crc_arm.h  crc_clmul.h  crc_rvzbc.h  crc_slice4.h  crc_zeropad.h  hasher.h  hasher_input.h  hasher_input_base.h  hasher_input_impl.h  hasher_input_stub.h  hasher_md5crc.h  hasher_md5crc_base.h  hasher_md5crc_impl.h  hasher_md5crc_stub.h  hasher_md5mb.h  hasher_md5mb_base.h  hasher_md5mb_impl.h  hasher_md5mb_stub.h  hasher_stub.h  md5-avx512.h  md5-base.h  md5-final.h  md5-scalar-base.h  md5-scalar.h  md5mb-base.h  md5mb-neon.h  md5mb-scalar.h  md5mb-sse.h  md5x2-arm-asm.h  md5x2-base.h  md5x2-neon-asm.h  md5x2-neon.h  md5x2-scalar.h  md5x2-sse-asm.h  md5x2-sse.h  md5x2-x86-asm.h
include/par2/osinfo/: cpuid.h  platform.h
parpar/: gf16.cmake  gf16.vcxproj  hasher.cmake  hasher.vcxproj
parpar/gf16/: controller.cpp  controller_cpu.cpp  controller_ocl.cpp  controller_ocl_init.cpp  gf16_affine_avx10.c  gf16_affine_avx2.c  gf16_affine_avx512.c  gf16_affine_gfni.c  gf16_cksum_avx2.c  gf16_cksum_avx512.c  gf16_cksum_generic.c  gf16_cksum_neon.c  gf16_cksum_rvv.c  gf16_cksum_sse2.c  gf16_cksum_sve.c  gf16_clmul_neon.c  gf16_clmul_rvv.c  gf16_clmul_sha3.c  gf16_clmul_sve2.c  gf16_lookup.c  gf16_lookup_sse2.c  gf16_shuffle128_rvv.c  gf16_shuffle128_sve.c  gf16_shuffle128_sve2.c  gf16_shuffle2x128_sve2.c  gf16_shuffle512_sve2.c  gf16_shuffle_avx.c  gf16_shuffle_avx2.c  gf16_shuffle_avx512.c  gf16_shuffle_neon.c  gf16_shuffle_ssse3.c  gf16_shuffle_vbmi.c  gf16_xor_avx2.c  gf16_xor_avx512.c  gf16_xor_common.h  gf16_xor_sse2.c  gf16mul.cpp  gf16pmul.cpp  gf16pmul_avx2.c  gf16pmul_neon.c  (+17 more)
parpar/hasher/: crc_zeropad.c  hasher.cpp  hasher_armcrc.cpp  hasher_avx2.cpp  hasher_avx512.cpp  hasher_avx512vl.cpp  hasher_bmi1.cpp  hasher_clmul.cpp  hasher_input.cpp  hasher_md5crc.cpp  hasher_md5mb.cpp  hasher_neon.cpp  hasher_neoncrc.cpp  hasher_rvzbc.cpp  hasher_scalar.cpp  hasher_sse.cpp  hasher_sve2.cpp  hasher_xop.cpp  md5-final.c  tables.cpp
src/: commandline.cpp  commandline.h  commandline_test.cpp  crc.cpp  crc.h  crc_test.cpp  creatorpacket.cpp  criticalpacket.cpp  criticalpacket_test.cpp  datablock.cpp  descriptionpacket.cpp  descriptionpacket_test.cpp  diskfile.cpp  diskfile_test.cpp  filechecksummer.cpp  filechecksummer.h  foreach_parallel.h  galois.h  galois_test.cpp  hasher.h  letype_test.cpp  libpar2.cpp  libpar2.h  libpar2_test.cpp  libpar2internal.h  mainpacket.cpp  md5.cpp  md5.h  md5_test.cpp  par1fileformat.cpp  par1repairer.cpp  par1repairer.h  par1repairersourcefile.cpp  par2cmdline.cpp  par2creator.cpp  par2creator.h  par2creatorsourcefile.cpp  par2creatorsourcefile.h  par2fileformat.cpp  par2repairer.cpp  (+12 more)
